--- a/Tensorflow/workspace/models/my_ssd_mobnet/pipeline.config
+++ b/Tensorflow/workspace/models/my_ssd_mobnet/pipeline.config
@@ -147,6 +147,30 @@ train_config {
       overlap_thresh: 0.0
     }
   }
+  data_augmentation_options {
+    random_rotation90 {
+    probability : 0.5
+    }
+  }
+
+  data_augmentation_options {
+    random_vertical_flip {
+    probability : 0.5
+    }
+  }
+
+  data_augmentation_options {
+    random_absolute_pad_image {
+    max_height_padding : 10
+    max_width_padding : 50
+    }
+  }
+
+  data_augmentation_options {
+    random_black_patches {
+    probability : 0.5
+    }
+  }
   sync_replicas: true
   optimizer {
     momentum_optimizer {
