--- a/requirements-dog.txt
+++ b/requirements-dog.txt
@@ -1,4 +1,6 @@
 opencv-python==4.5.5.62
 opencv-python-headless==4.5.5.62
+opencv-contrib-python==4.5.5.62
 numpy==1.19.3
 Pillow==9.0.1
+PyQt5==5.15.6
