--- a/requirements-dog.txt
+++ b/requirements-dog.txt
@@ -3,4 +3,8 @@ opencv-python-headless==4.5.5.62
 opencv-contrib-python==4.5.5.62
 numpy==1.19.3
 Pillow==9.0.1
-PyQt5==5.15.6
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.1
+PyQtChart==5.12
+PyQtWebEngine==5.12.1
