--- a/requirements2.txt
+++ b/requirements2.txt
@@ -57,15 +57,15 @@ keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
 labelImg==1.8.6
-libclang==13.0.0
+#libclang==13.0.0
 lvis==0.5.3
 lxml==4.8.0
 Markdown==3.3.6
 matplotlib==3.2.0
 matplotlib-inline==0.1.3
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
+#mkl-fft==1.3.1
+#mkl-random==1.2.2
+#mkl-service==2.4.0
 munkres==1.1.4
 mypy-extensions==0.4.3
 nest-asyncio==1.5.4
@@ -103,15 +103,15 @@ pydot==1.4.2
 Pygments==2.11.2
 pymongo==3.12.3
 pyparsing==2.4.7
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.1
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
+#PyQt5==5.15.6
+#PyQt5-Qt5==5.15.2
+#PyQt5-sip==12.9.1
+#PyQtChart==5.12
+#PyQtWebEngine==5.12.1
 python-dateutil==2.8.2
 python-slugify==6.0.1
 pytz==2021.3
-pywin32==303
+#pywin32==303
 PyYAML==5.4.1
 pyzmq==22.3.0
 regex==2022.1.18
@@ -124,7 +124,7 @@ scipy==1.8.0
 sentencepiece==0.1.96
 seqeval==1.2.2
 setuptools==60.9.3
-sip==4.19.13
+sip==5.0.0
 six==1.16.0
 # c:\users\elvis\code\jedha\project\final\tflite\tfodcourse\tensorflow\models\research\slim# c:\users\elvis\code\jedha\project\final\tflite\tfodcourse\tensorflow\models\research\slim
 slim==0.1
@@ -133,16 +133,8 @@ tabulate==0.8.9
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-addons==0.16.1
-tensorflow-datasets==4.5.2
-tensorflow-estimator==2.5.0
-tensorflow-hub==0.12.0
-tensorflow-io==0.24.0
-tensorflow-io-gcs-filesystem==0.24.0
-tensorflow-metadata==1.6.0
-tensorflow-model-optimization==0.7.1
-tensorflow-text==2.8.1
+
+# Others
 termcolor==1.1.0
 text-unidecode==1.3
 tf-estimator-nightly==2.8.0.dev2021122109
@@ -167,3 +159,15 @@ wheel==0.37.1
 wincertstore==0.2
 wrapt==1.12.1
 zipp==3.7.0
+
+# Tensorflow
+#tensorflow==2.5.0
+#tensorflow-addons==0.16.1
+#tensorflow-datasets==4.5.2
+#tensorflow-estimator==2.5.0
+#tensorflow-hub==0.12.0
+#tensorflow-io==0.24.0
+#tensorflow-io-gcs-filesystem==0.24.0
+#tensorflow-metadata==1.6.0
+#tensorflow-model-optimization==0.7.1
+#tensorflow-text==2.8.1
