--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 Tensorflow/workspace/annotations
 Tensorflow/workspace/images
+Tensorflow/workspace
 /.ipynb_checkpoints
 /ipynb_checkpoints
 .ipynb_checkpoints
